terraform/deploy/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: hello-world.foo.bar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: grafana.foo.bar
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
