terraform/deploy/ingress/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - grafana.foo.bar
      - hello-world.foo.bar
      secretName: foobartls
  rules:
  - host: hello-world.foo.bar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80

  - host: grafana.foo.bar
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
